# react-native-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  react-native-awesome-rs-library.podspec  tsconfig.json
.cargo/: config
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/awesomerslibrary/: AwesomeRsLibraryModule.kt  AwesomeRsLibraryPackage.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/awesomerslibraryexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/awesomerslibraryexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/AwesomeRsLibraryExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/AwesomeRsLibraryExample.xcodeproj/: project.pbxproj
example/ios/AwesomeRsLibraryExample.xcodeproj/xcshareddata/xcschemes/: AwesomeRsLibraryExample.xcscheme
example/ios/AwesomeRsLibraryExampleTests/: AwesomeRsLibraryExampleTests.m
example/src/: App.tsx
ios/: AwesomeRsLibrary-Bridging-Header.h  AwesomeRsLibrary.mm  AwesomeRsLibrary.swift
ios/AwesomeRsLibrary.xcodeproj/: project.pbxproj
rust/: build_android.sh  build_ios.sh
rust/awesome/: Cargo.toml  build.rs  uniffi.toml
rust/awesome/src/: lib.rs  lib.udl
rust/uniffi-bindgen/: Cargo.toml
src/: index.tsx
(+1 files in other folders)
