[package]
name = "awesome"
version = "0.1.0"
authors = ["Gheorghe <gheorghe@cljs.dev>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
doctest = false

[dependencies]
uniffi = "0.23.0"
thiserror = "1.0"

[features]
uniffi-bindgen = ["uniffi/cli"]

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }
